<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Statsus</string>
    <string name="settings_button">Statsus Settings</string>
    <string name="bt_my_day">My Day</string>
    <string name="bt_stats">Stats</string>
    <string name="bt_friends">Friends</string>
    <string name="date_bg">Date Background Image</string>
    <string name="current_date">December 12th 2014</string>
    <string name="date_view_next">Next Day</string>
    <string name="date_view_previous">Previous Day</string>
    <string name="intro_text_1">What would you like to keep track of?</string>
    <string name="sub_text_1">Pick from the items below:</string>
    <string name="sub_text_2">Click the item you\'d like to edit:</string>
    <string name="sub_text_3">Items you\'ve picked so far:</string>
    <string name="sub_text_4">Add more from the items bellow:</string>
    <string name="sub_text_5">Your items for today:</string>
    <string name="sub_text_6">You can also find items in the categories below:</string>
    <string name="sub_text_7">Add your own item:</string>
    <string name="input_text_1">Search here for the items you\'d like to add</string>
    <string name="item_icon">Item Icon</string>
    <string name="item_text">Happy</string>
    <string name="item_text_preview">Item Preview</string>
    <string name="remove_items">Remove Items</string>
    <string name="add_more_items">Add More Items</string>
    <string name="item_name">Name of your item</string>
    <string name="change_icon">Change Icon</string>
    <string name="change_color">Change Color</string>
    <string name="change_item">Change Item</string>
    <string name="cancel">Cancel</string>
    <string name="edit">Edit</string>
    <string name="remove">Remove</string>
    <string name="submit">Submit</string>
    <string name="new_item">Add New Item</string>
    <string name="my_items">My Items</string>
    <string name="finished">Finished</string>
    <string name="note_na">Note Not Available</string>
    <string name="note_exists">Note Exists</string>
    <string name="custom_numeric_value">Custom Numeric Value</string>
    <string name="default_numeric_value">5</string>
    <string name="category_title">Category Title</string>
    <string name="currently_viewing">Currently Viewing:</string>
    <string name="currently_viewing_stats_for">Currently Viewing Stats For:</string>
    <string name="value1">1</string>
    <string name="value2">2</string>
    <string name="value3">3</string>
    <string name="value4">4</string>
    <string name="custom_value">Custom Value</string>
    <string name="pick_icon">Pick an Icon</string>
    <string name="pick_color">Pick a Color</string>
    <string name="add_item">Add Item</string>
    <string name="viewing_item">Sports</string>
    <string name="single_items">Single Items</string>
    <string name="item_groups">Groups of Items</string>
    <string name="intersecting_items">Intersecting Items</string>
    <string name="single_items_subtext">View all the available statistics on a single item at a time.</string>
    <string name="item_groups_subtext">You can combine items of the same type into groups and view both individual and group stats (ex: tennis and football can be combined into sports).</string>
    <string name="intersecting_items_subtext">View statistics for items that occur often on the same day (ex: video games and happy may often appear on the same day).</string>
    <string name="single_items_bt">View Stats for Single Items</string>
    <string name="item_groups_bt">View Stats for Groups of Items</string>
    <string name="intersecting_items_bt">View Stats for Intersecting Items</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="custom">Custom</string>

    <string name="bgcolor1">#151515</string>
    <string name="bgcolor2">#000</string>

    <string name="main_color_1">#2d9dfb</string>
    <string name="main_color_2">#FFF</string>

    <string name="sub_color_1">#57385c</string>
    <string name="sub_color_2">#2d5bc5</string>
    <string name="sub_color_3">#f87d6e</string>
    <string name="sub_color_4">#2dcbc9</string>
    <string name="sub_color_5">#ba233f</string>










    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

</resources>
