<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:background="@string/bgcolor1"
    android:layout_height="fill_parent">


    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="0dp"
        android:paddingRight="0dp"
        android:paddingTop="10dp"
        android:background="@string/bgcolor1"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="com.example.statsusv1.statsusv1.Statsus">


        <ImageView
            android:layout_width="150dp"
            android:contentDescription="@string/app_name"
            android:layout_height="wrap_content"
            android:id="@+id/logo_image"
            android:adjustViewBounds="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft = "8dip"
            android:layout_marginTop = "6dip"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:src="@drawable/logo_statsus" />

        <ImageButton
            android:id="@+id/settings_button"
            android:contentDescription="@string/settings_button"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight = "8dip"
            android:layout_marginTop = "2dip"
            android:layout_alignParentEnd="true"
            android:src="@drawable/icon_settings"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            style="@style/settings_button" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_marginTop = "10dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:layout_height="wrap_content"
            android:background="@string/bgcolor2"
            android:layout_below="@+id/settings_button"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:id="@+id/top_navigation_container">

            <Button
                android:layout_width="fill_parent"
                android:layout_weight="1"
                android:text="@string/bt_my_day"
                android:onClick="myDay"
                android:id="@+id/bt_my_day"
                android:layout_marginLeft = "8dip"
                style="@style/gray_button" />

            <Button
                android:layout_width="fill_parent"
                android:layout_weight="1"
                android:text="@string/bt_stats"
                android:id="@+id/bt_stats"
                android:onClick="myStats"
                android:layout_marginLeft = "8dip"
                android:layout_marginRight = "8dip"
                style="@style/blue_button" />

            <Button
                android:layout_width="fill_parent"
                android:layout_weight="1"
                android:text="@string/bt_friends"
                android:id="@+id/bt_friends"
                android:layout_marginRight = "8dip"
                style="@style/gray_button" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_below="@+id/top_navigation_container"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/search_function">


            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/single_items"
                android:layout_marginLeft = "4dip"
                android:layout_marginRight = "4dip"
                android:textColor="@string/main_color_1"
                android:textSize="30sp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/single_items_subtext"
                android:layout_marginLeft = "4dip"
                android:layout_marginRight = "4dip"
                android:textColor="@string/main_color_2"
                android:textSize="14sp" />

            <Button
                android:layout_width="fill_parent"
                android:layout_weight="1"
                android:text="@string/single_items_bt"
                android:layout_marginLeft = "4dip"
                android:layout_marginRight = "4dip"
                android:layout_marginTop="10dp"
                android:id="@+id/button"
                android:onClick="myStats"
                style="@style/blue_button" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_marginTop = "25dp"
                android:layout_marginBottom = "15dp"
                android:layout_height="1dp"
                android:background="#20FFFFFF"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:id="@+id/linearLayout">
            </LinearLayout>



            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/item_groups"
                android:layout_marginLeft = "4dip"
                android:layout_marginRight = "4dip"
                android:textColor="@string/main_color_1"
                android:textSize="30sp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/item_groups_subtext"
                android:layout_marginLeft = "4dip"
                android:layout_marginRight = "4dip"
                android:textColor="@string/main_color_2"
                android:textSize="14sp" />

            <Button
                android:layout_width="fill_parent"
                android:layout_weight="1"
                android:text="@string/item_groups_bt"
                android:layout_marginLeft = "4dip"
                android:layout_marginRight = "4dip"
                android:layout_marginTop="10dp"
                android:id="@+id/item_groups_bt"
                android:onClick="myStats"
                style="@style/blue_button" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_marginTop = "25dp"
                android:layout_marginBottom = "15dp"
                android:layout_height="1dp"
                android:background="#20FFFFFF"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp">
            </LinearLayout>


            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/intersecting_items"
                android:layout_marginLeft = "4dip"
                android:layout_marginRight = "4dip"
                android:textColor="@string/main_color_1"
                android:textSize="30sp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/intersecting_items_subtext"
                android:layout_marginLeft = "4dip"
                android:layout_marginRight = "4dip"
                android:textColor="@string/main_color_2"
                android:textSize="14sp" />

            <Button
                android:layout_width="fill_parent"
                android:layout_weight="1"
                android:text="@string/intersecting_items_bt"
                android:layout_marginLeft = "4dip"
                android:layout_marginRight = "4dip"
                android:layout_marginTop="10dp"
                android:id="@+id/intersecting_items_bt"
                android:onClick="myStats"
                style="@style/blue_button" />




        </LinearLayout>


    </RelativeLayout>

</ScrollView>