<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:background="@string/bgcolor1"
    android:layout_height="fill_parent">


    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="0dp"
        android:paddingRight="0dp"
        android:paddingTop="10dp"
        android:background="@string/bgcolor1"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="com.example.statsusv1.statsusv1.Statsus">


        <ImageView
            android:layout_width="150dp"
            android:contentDescription="@string/app_name"
            android:layout_height="wrap_content"
            android:id="@+id/logo_image"
            android:adjustViewBounds="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft = "8dip"
            android:layout_marginTop = "6dip"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:src="@drawable/logo_statsus" />

        <ImageButton
            android:id="@+id/settings_button"
            android:contentDescription="@string/settings_button"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight = "8dip"
            android:layout_marginTop = "2dip"
            android:layout_alignParentEnd="true"
            android:src="@drawable/icon_settings"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            style="@style/settings_button" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_marginTop = "10dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:layout_height="wrap_content"
            android:background="@string/bgcolor2"
            android:layout_below="@+id/settings_button"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:id="@+id/top_navigation_container">

            <Button
                android:layout_width="fill_parent"
                android:layout_weight="1"
                android:text="@string/bt_my_day"
                android:onClick="myDay"
                android:id="@+id/bt_my_day"
                android:layout_marginLeft = "8dip"
                style="@style/blue_button" />

            <Button
                android:layout_width="fill_parent"
                android:layout_weight="1"
                android:text="@string/bt_stats"
                android:id="@+id/bt_stats"
                android:onClick="myStats"
                android:layout_marginLeft = "8dip"
                android:layout_marginRight = "8dip"
                style="@style/gray_button" />

            <Button
                android:layout_width="fill_parent"
                android:layout_weight="1"
                android:text="@string/bt_friends"
                android:id="@+id/bt_friends"
                android:layout_marginRight = "8dip"
                style="@style/gray_button" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="70dp"
            android:layout_below="@+id/top_navigation_container"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/date_container">


            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:contentDescription="@string/date_bg"
                android:id="@+id/date_background"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:scaleType="centerCrop"
                android:src="@drawable/date_background_1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/current_date"
                android:textColor="@string/main_color_2"
                android:textSize="18sp"
                android:id="@+id/current_date"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true" />

            <ImageButton
                android:id="@+id/date_view_next"
                android:contentDescription="@string/date_view_next"
                android:src="@drawable/arrow_right"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"
                android:layout_marginRight = "8dip"
                style="@style/white_button"
                android:layout_alignTop="@+id/date_view_previous"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />

            <ImageButton
                android:id="@+id/date_view_previous"
                android:contentDescription="@string/date_view_previous"
                android:src="@drawable/arrow_left"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"
                android:layout_marginLeft = "8dip"
                style="@style/white_button"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

        </RelativeLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/intro_text_1"
            android:id="@+id/intro_text_1"
            android:layout_below="@+id/date_container"
            android:layout_marginLeft = "8dip"
            android:layout_marginRight = "8dip"
            android:layout_marginTop = "15dip"
            android:textColor="@string/main_color_2"
            android:textSize="30sp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@+id/intro_text_1"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:background="#eaeaea"
            android:src="@drawable/submit_items_bg"
            android:paddingBottom="15dp"
            android:paddingTop="15dp"
            android:layout_marginTop = "15dip"
            android:id="@+id/content_area">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sub_text_1"
                android:id="@+id/textView3"
                android:layout_marginLeft = "8dip"
                android:layout_marginRight = "8dip"
                android:textColor="#151515"
                android:textSize="19sp" />

            <!-- entry -->
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft = "8dip"
                android:layout_marginRight = "8dip"
                android:layout_marginTop="15dp">

                <ImageButton
                    android:id="@+id/item_icon_1"
                    android:contentDescription="@string/item_icon"
                    android:src="@drawable/uicons_restaurant"
                    android:background="#cccccc"
                    style="@style/colored_squared" />

                <Button
                    style="@style/white_bg_text"
                    android:text="@string/item_text"
                    android:textColor="#cccccc"
                    android:layout_width="match_parent"
                    android:id="@+id/item_text_1" />

                <ImageButton
                    android:id="@+id/note_na"
                    android:contentDescription="@string/note_na"
                    android:src="@drawable/note_na"
                    android:background="@string/main_color_2"
                    style="@style/colored_squared" />

                <Button
                    android:text="@string/default_numeric_value"
                    android:id="@+id/default_numeric_value_1"
                    android:textColor="@string/main_color_2"
                    android:background="#CCCCCC"
                    style="@style/colored_squared" />

            </LinearLayout>
            <!-- entry -->

            <!-- entry -->
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft = "8dip"
                android:layout_marginRight = "8dip"
                android:layout_marginTop="10dp">

                <ImageButton
                    android:id="@+id/item_icon_2"
                    android:contentDescription="@string/item_icon"
                    android:src="@drawable/uicons_videogames"
                    android:background="#cccccc"
                    style="@style/colored_squared" />

                <Button
                    style="@style/white_bg_text"
                    android:text="@string/item_text"
                    android:textColor="#cccccc"
                    android:layout_width="match_parent"
                    android:id="@+id/item_text_2" />

                <ImageButton
                    android:id="@+id/note_exists"
                    android:contentDescription="@string/note_exists"
                    android:src="@drawable/note_exists"
                    android:background="@string/main_color_2"
                    style="@style/colored_squared" />

                <ImageButton
                    android:src="@drawable/custom_value_white"
                    android:contentDescription="@string/custom_numeric_value"
                    android:id="@+id/custom_numeric_value"
                    android:background="#CCCCCC"
                    style="@style/colored_squared" />

            </LinearLayout>
            <!-- entry -->

            <!-- entry -->
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft = "8dip"
                android:layout_marginRight = "8dip"
                android:layout_marginTop="10dp">

                <ImageButton
                    android:id="@+id/item_icon_3"
                    android:contentDescription="@string/item_icon"
                    android:src="@drawable/uicons_smiley"
                    android:background="@string/sub_color_5"
                    style="@style/colored_squared" />

                <Button
                    style="@style/white_bg_text"
                    android:text="@string/item_text"
                    android:textColor="#c82d2f"
                    android:layout_width="match_parent"
                    android:id="@+id/item_text_3" />

                <ImageButton
                    android:id="@+id/note_na_2"
                    android:contentDescription="@string/note_na"
                    android:src="@drawable/note_na"
                    android:background="@string/main_color_2"
                    style="@style/colored_squared" />

                <Button
                    android:text="@string/default_numeric_value"
                    android:id="@+id/default_numeric_value_2"
                    android:textColor="@string/main_color_2"
                    android:background="@string/sub_color_5"
                    style="@style/colored_squared" />

            </LinearLayout>
            <!-- entry -->


            <!-- 1 row of 2 buttons with text and icon starts -->
            <LinearLayout
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_marginTop = "15dp"
                android:layout_marginLeft = "4dip"
                android:layout_marginRight = "4dip"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_weight="1"
                    android:layout_height="wrap_content">

                    <Button
                        android:layout_width="fill_parent"
                        android:text="@string/cancel"
                        android:layout_marginLeft = "4dip"
                        android:layout_marginRight = "4dip"
                        android:id="@+id/cancel"
                        android:onClick="myStats"
                        style="@style/blue_button" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_weight="1"
                    android:layout_height="wrap_content">

                    <Button
                        android:layout_width="fill_parent"
                        android:text="@string/submit"
                        android:layout_marginLeft = "4dip"
                        android:layout_marginRight = "4dip"
                        android:id="@+id/submit"
                        android:onClick="myStats"
                        style="@style/blue_button" />

                </LinearLayout>
            </LinearLayout>
            <!-- 1 row of 2 buttons with text and icon ends -->

        </LinearLayout>


        <!-- 1 row of 2 buttons with text and icon starts -->
        <LinearLayout
            android:layout_below="@+id/content_area"
            android:orientation="horizontal"
            android:baselineAligned="false"
            android:layout_width="fill_parent"
            android:layout_marginTop = "15dp"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginLeft = "4dip"
                android:layout_marginRight = "4dip">

                <Button
                    android:layout_width="fill_parent"
                    android:text="@string/remove_items"
                    android:id="@+id/remove_items"
                    android:onClick="myStats"
                    style="@style/gray_button" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginLeft = "4dip"
                android:layout_marginRight = "4dip">

                <Button
                    android:layout_width="fill_parent"
                    android:text="@string/add_more_items"
                    android:id="@+id/add_more_items"
                    android:onClick="myStats"
                    style="@style/gray_button" />

            </LinearLayout>
        </LinearLayout>
        <!-- 1 row of 2 buttons with text and icon ends -->


    </RelativeLayout>

</ScrollView>